# patch-theory

./: .gitignore  LICENSE  README.md  patch-theory.cabal
src/Data/: Patch.hs
src/Data/Patch/: Commute.hs  Instances.hs  Invert.hs  Merge.hs
src/Data/Patch/Instances/: Eq.hs  List.hs
test/Data/Patch/Instances/: EqSpec.hs
